--- a/.gitignore
+++ b/.gitignore
@@ -240,3 +240,5 @@ TSWLatexianTemp*
 
 # generated if using elsarticle.cls
 *.spl
+tesis (Copia en conflicto de juan verdugo 2017-12-18).pdf
+tesis (Copia en conflicto de juan verdugo 2017-12-19).pdf
